<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/>
    </parent>

    <groupId>dev.nebulaops</groupId>
    <artifactId>nebulaops-backend</artifactId>
    <version>22.3.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>nebulaops-shared-kernel</module>
        <module>auth-service</module>
        <module>task-service</module>
        <module>file-service</module>
        <module>notification-service</module>
        <module>gateway-service</module>
        <module>ai-ops-service</module>
        <module>devsecops-service</module>
        <module>pipeline-engine-service</module>
        <module>terraform-studio-service</module>
        <module>environment-manager-service</module>
        <module>gitops-control-service</module>
        <module>observability-service</module>
        <module>cost-analytics-service</module>
        <module>release-orchestrator-service</module>
        <module>policy-governance-service</module>
        <module>audit-service</module>
        <module>spring-mvc-service</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <spring-cloud.version>2023.0.3</spring-cloud.version>
        <springdoc.version>2.6.0</springdoc.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
